fixed overflow

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -57,7 +57,7 @@ $fill : center / cover no-repeat;
     position: absolute;
     top: 0;
     left: 0;
-    width: 100vw;
+    width: 100%;
     display: flex;
     justify-content: space-between;
 }
